--- a/index.html
+++ b/index.html
@@ -1,72 +1,125 @@
-<!DOCTYPE html>
+<!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Lost Heaven Multiplayer : ">
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" href="stylesheets/github-dark.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+  <title>Lost Heaven Multiplayer</title>
+  <meta name="description" content="">
 
-    <title>Lost Heaven Multiplayer</title>
-  </head>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <body>
+</head>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/LHMPTeam/lhmp">View on GitHub</a>
+<body>
 
-          <h1 id="project_title">Lost Heaven Multiplayer</h1>
-          <h2 id="project_tagline"></h2>
+  <div class="wrapper">
+    <header>
+      <h1 class="title">Lost Heaven Multiplayer</h1>
+    </header>
+    <div id="container">
+      <p class="tagline"></p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/LHMPTeam/lhmp/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/LHMPTeam/lhmp/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/LHMPTeam/lhmp" class="code">View Lost Heaven Multiplayer on GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <h1>
+<a id="lost-heaven-multiplayer" class="anchor" href="#lost-heaven-multiplayer" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Lost Heaven Multiplayer</h1>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/LHMPTeam/lhmp/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/LHMPTeam/lhmp/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
+<p>Lost Heaven Multiplayer (LHMP) is open-source modification for PC game
+ <strong>Mafia:The city of Lost Heaven</strong>(2K Czech), bringing multiplayer experience into the game. 
+The gameplay is similar to other modifications such as SAMP, allowing to customize game features via gamemodes written in Squirrel.</p>
+
+<p>Project is mostly written in <strong>C++</strong>, supported by <strong>inline Assembler</strong> for game interaction. </p>
+
+<h2>
+<a id="disclaimer" class="anchor" href="#disclaimer" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Disclaimer</h2>
+
+<ul>
+<li>Please note that this project has been started with little knowledge about how MP works. This reflects the quality of the code and possible mistakes that were made during development. Everyone starts somewhere and this was the place where we've learned a lot of useful information, which improved our coding knowledge and skills.</li>
+<li>This code might be a mess, it could look horrible for your eyes, but what you see are the baby steps we've had to accomplish to make ourselves better in general.</li>
+<li>So please, if you feel to discuss coding style of this project, you'd better not. We know what has to be or not be changed, but it's too late to do so.</li>
+<li>If you're willing to improve this code, just PR and we will gladly accept your changes.</li>
+<li>This project is <strong>NO LONGER MAINTAINED</strong> by its core developers, due to lack of time and interest. We won't fix your issues (except for issues related to repository structure) and/or improve your playing experience!</li>
+<li>This project has been open-sourced so you can see MP in amateurs' eyes. It does not represent ideal solution for MP. There is no ideal solution for such complex project.</li>
+<li>You are free to manipulate with project under Apache 2 license. PRs are welcomed.</li>
+</ul>
+
+<h2>
+<a id="compilation" class="anchor" href="#compilation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Compilation</h2>
+
+<ul>
+<li>LHMP supports both Linux and Windows platforms although client is completely Win-like. </li>
+<li>Have a look at COMPILE.md to find out how to compile our work.</li>
+</ul>
+
+<h2>
+<a id="credits" class="anchor" href="#credits" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Credits</h2>
+
+<ul>
+<li>The list of all contributors can be found in authors.md. </li>
+<li>Embeds RakNet by Oculus VR. (BSD License)</li>
+<li>Embeds MD5 by Colin Plumb.</li>
+<li>Embeds Direct3D 8.1 SDK by Microsoft.</li>
+<li>Embeds Squirrel 3 by Alberto Demichelis.</li>
+<li>Please remind us if we've forgot to mention additional embeddings.</li>
+</ul>
+
+<h2>
+<a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h2>
+
+<ul>
+<li>Apache 2 licensed, see LICENSE for more information.</li>
+</ul>
+
+<h2>
+<a id="notice" class="anchor" href="#notice" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Notice</h2>
+
+<ul>
+<li>LHMP and all contents within this repository and/or organisation, are not affiliated with 2K Czech, 2K Games or Take-Two Interactive Software Inc. </li>
+<li>Mafia is registered trademark of Take-Two Interactive Software Inc.</li>
+</ul>
+
+<h2>
+<a id="links" class="anchor" href="#links" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Links</h2>
+
+<ul>
+<li>YouTube channel <a href="https://www.youtube.com/user/lhmpmode">https://www.youtube.com/user/lhmpmode</a>
+</li>
+</ul>
+        </article>
+      </div>
     </div>
+    <footer>
+      <div class="owner">
+      <p><a href="https://github.com/LHMPTeam" class="avatar"><img src="https://avatars3.githubusercontent.com/u/21038215?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/LHMPTeam">LHMPTeam</a> maintains <a href="https://github.com/LHMPTeam/lhmp">Lost Heaven Multiplayer</a></p>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/LHMPTeam/lhmp/tarball/master" class="tar">tar</a><a href="https://github.com/LHMPTeam/lhmp/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Lost Heaven Multiplayer maintained by <a href="https://github.com/LHMPTeam">LHMPTeam</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+  
+</body>
 </html>
